--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
+    "@datepicker-react/styled": "^2.8.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
@@ -16,10 +17,16 @@
     "firebase": "^8.7.1",
     "firebase-tools": "^9.16.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
+    "react-native-calendar-picker": "^7.1.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "sassy-datepicker": "^0.7.0",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^1.1.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-react": "^7.16.7"
   }
 }
