--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@datepicker-react/styled": "^2.8.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "*",
     "@mui/material": "^5.2.6",
@@ -16,6 +17,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^8.7.1",
     "firebase-tools": "^9.16.0",
+    "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
