--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-theme-provider": "^0.1.3",
     "sassy-datepicker": "^0.7.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
