--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "*",
     "@mui/material": "^5.2.6",
     "@mui/x-data-grid": "^5.2.1",
+    "@sandstreamdev/react-swipeable-list": "github:sandstreamdev/react-swipeable-list",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -25,6 +26,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipe-to-reveal-actions": "^1.0.3",
     "react-theme-provider": "^0.1.3",
     "sassy-datepicker": "^0.7.0",
     "styled-components": "^5.3.3",
