--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-swipe-to-reveal-actions": "^1.0.3",
+    "react-swipeable-list": "^1.5.0",
     "react-theme-provider": "^0.1.3",
     "sassy-datepicker": "^0.7.0",
     "styled-components": "^5.3.3",
